package proto_ff;

import "yd_fieldoptions.proto";


message halohaloattributeDesc
{
	optional int32 type = 1[(yd_fieldoptions.field_cname) = "类型"];
	optional int32 value = 2[(yd_fieldoptions.field_cname) = "值"];
}

message halohaloActiveAttributeDesc
{
	optional int32 type = 1[(yd_fieldoptions.field_cname) = "类型"];
	optional int32 value = 2[(yd_fieldoptions.field_cname) = "值"];
}

message halohalo
{
	optional int64 ID = 1[(yd_fieldoptions.field_cname) = "光环ID"];
	optional string name = 2[(yd_fieldoptions.field_cname) = "光环名称", (yd_fieldoptions.field_bufsize) = 60];
	optional int32 type = 3[(yd_fieldoptions.field_cname) = "外观类型"];
	optional int32 quality = 4[(yd_fieldoptions.field_cname) = "光环品质"];
	optional string professionLimit = 5[(yd_fieldoptions.field_cname) = "职业限制", (yd_fieldoptions.field_bufsize) = 60];
	optional int64 activationItem = 6[(yd_fieldoptions.field_cname) = "激活道具ID"];
	optional int32 activationNum = 7[(yd_fieldoptions.field_cname) = "激活道具数量"];
	optional int64 starId = 8[(yd_fieldoptions.field_cname) = "升星道具id"];
	optional string starNum = 9[(yd_fieldoptions.field_cname) = "升星道具数量", (yd_fieldoptions.field_bufsize) = 300];
	optional int32 starUp = 10[(yd_fieldoptions.field_cname) = "升星等级上限"];
	optional int32 starBer = 11[(yd_fieldoptions.field_cname) = "每次升星属性增加的百分比值"];
	repeated halohaloattributeDesc attribute = 12[(yd_fieldoptions.field_cname) = "属性", (yd_fieldoptions.field_arysize) = 6];
	repeated halohaloActiveAttributeDesc ActiveAttribute = 13[(yd_fieldoptions.field_cname) = "属性", (yd_fieldoptions.field_arysize) = 6];
}


message Sheet_halohalo
{
	repeated halohalo halohalo_List = 1[(yd_fieldoptions.field_arysize)=20];
}
